--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "home-library",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Alex Bodnar",
   "private": true,
   "license": "UNLICENSED",
   "engines": {
@@ -40,6 +40,7 @@
     "reflect-metadata": "^0.2.1",
     "rimraf": "^5.0.5",
     "rxjs": "^7.8.1",
+    "typescript": "^5.3.3",
     "uuid": "^9.0.1",
     "yaml": "^2.8.0"
   },
@@ -67,7 +68,6 @@
     "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.3"
+    "tsconfig-paths": "^4.2.0"
   }
 }
