--- a/Dockerfile.postgres
+++ b/Dockerfile.postgres
@@ -1,1 +1,4 @@
-FROM 17.5-alpine3.22
+FROM postgres:17.5-alpine3.22
+
+RUN mkdir -p /var/log/postgresql && \
+    chown -R postgres:postgres /var/log/postgresql
