--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
       context: .
       dockerfile: Dockerfile.postgres
     container_name: postgres
-    restart: on-failure
+    restart: unless-stopped
     ports:
       - "${DB_PORT}:${DB_PORT}"
     env_file:
@@ -20,7 +20,7 @@ services:
       context: .
       dockerfile: Dockerfile.app
     container_name: home_library_service
-    restart: on-failure
+    restart: unless-stopped
     ports:
       - "${PORT}:${PORT}"
     depends_on:
@@ -29,6 +29,7 @@ services:
     - .env
     volumes:
       - ./src:/app/src
+      - /app/node_modules
     networks:
       - home-net
 
