--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "ts-node-dev --respawn --transpile-only --poll src/main.ts",
+    "start:dev": "nodemon --watch src --ext ts,js,json --exec ts-node src/main.ts --exitcrash",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -42,11 +42,11 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "http-status-codes": "^2.2.0",
+    "nodemon": "^3.1.10",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.1",
     "rimraf": "^5.0.5",
     "rxjs": "^7.8.1",
-    "ts-node-dev": "^2.0.0",
     "typeorm": "^0.3.24",
     "typescript": "^5.3.3",
     "uuid": "^9.0.1",
