--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nodemon --watch src --ext ts,js,json --exec ts-node src/main.ts --exitcrash",
+    "start:dev": "nodemon --legacy-watch --watch src --ext ts,js,json --exec ts-node src/main.ts --exitcrash",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -25,7 +25,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "typeorm": "typeorm -d ./data-source.ts",
     "docker:down": "docker-compose down -v",
-    "docker:compose": "npm run docker:down && docker compose --profile develop up --build --watch",
+    "docker:compose": "docker compose --profile develop up --build --watch",
+    "docker:full": "npm run docker:down && npm run docker:compose",
     "docker:scan": "docker scout cves",
     "migration:generate": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:generate -d data-source.ts",
     "migration:run": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d data-source.ts",
