--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
       context: .
       dockerfile: Dockerfile.postgres
     container_name: postgres
-    restart: unless-stopped
+    restart: on-failure
     ports:
       - "${DB_PORT}:${DB_PORT}"
     env_file:
@@ -20,7 +20,7 @@ services:
       context: .
       dockerfile: Dockerfile.app
     container_name: home_library_service
-    restart: unless-stopped
+    restart: on-failure
     ports:
       - "${PORT}:${PORT}"
     depends_on:
