--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "node": ">=22.14.0"
   },
   "scripts": {
-    "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -17,22 +16,23 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest --testMatch \"<rootDir>/*.spec.ts\" --noStackTrace --runInBand",
+    "test": "jest --testMatch \"<rootDir>/*.spec.ts\" --runInBand",
     "test:auth": "cross-env TEST_MODE=auth jest --testPathIgnorePatterns refresh.e2e.spec.ts --noStackTrace --runInBand",
     "test:refresh": "cross-env TEST_MODE=auth jest --testPathPattern refresh.e2e.spec.ts --noStackTrace --runInBand",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "typeorm": "typeorm -d ./data-source.ts",
-    "docker:down": "docker-compose down -v",
+    "docker:down": "del-cli \"src/migrations/*.ts\" && docker-compose down -v",
     "docker:compose": "docker compose --profile develop up --build --watch",
-    "docker:full": "npm run docker:down && npm run docker:compose",
+    "docker:start": "migration:full && npm run docker:compose",
     "docker:scan": "docker scout cves",
     "pg:up": "docker-compose up -d postgres",
     "migration:generate": "npm run pg:up && npm run actual-generate",
     "actual-generate": "cross-env DB_HOST=localhost ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:generate -d data-source.ts ./src/migrations/AutoMigration",
-    "migration:run": "cross-env DB_HOST=localhost ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d data-source.ts",
-    "migration:revert": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:revert -d data-source.ts"
+    "migration:prep": "cross-env DB_HOST=localhost ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d data-source.ts",
+    "migration:full": "npm run migration:generate && npm run migration:prep ",
+    "migration:revert": "cross-env DB_HOST=localhost ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:revert -d data-source.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.4.16",
@@ -51,7 +51,6 @@
     "nodemon": "^3.1.10",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.1",
-    "rimraf": "^5.0.5",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.24",
     "typescript": "^5.3.3",
@@ -72,6 +71,7 @@
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "cross-env": "^7.0.3",
+    "del-cli": "^6.0.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
