--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,7 @@ services:
     volumes:
       - ./src:/app/src
       - /app/node_modules
+      - ./logs:/app/logs
     networks:
       - home-net
 
